Correct bottom alignment of top positioned panes

--- a/src/styles/status.scss
+++ b/src/styles/status.scss
@@ -84,7 +84,7 @@
   }
 
   &[data-position^="top-"] {
-    bottom: 40px;
+    bottom: 11px;
     top: auto;
 
     &::before {
